fix: wrong color for visited link

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -374,7 +374,7 @@ p.legend {
 }
 
 .content a:visited {
-  color: #621a7a;
+  color: #6b0050;
 }
 
 @media (min-width: 769px) {
